<resources>
    <string name="nabla_video_call_activity_label">Video call</string>
    <string name="nabla_video_call_controls_content_description_mic_on">Mic is on — Click to mute</string>
    <string name="nabla_video_call_controls_content_description_mic_off">Mic is muted — Click to unmute</string>
    <string name="nabla_video_call_controls_content_description_camera_on">Camera is enabled — Click to disable</string>
    <string name="nabla_video_call_controls_content_description_camera_off">Camera is disabled — Click to enabled</string>
    <string name="nabla_video_call_controls_content_description_flip_camera">Flip between front and back cameras</string>
    <string name="nabla_video_call_controls_content_description_hang_up">Hang up</string>
    <string name="nabla_video_call_back_button_content_description">Back</string>
    <string name="nabla_video_call_banner_connecting">Connecting…</string>
    <string name="nabla_video_call_banner_reconnecting">Reconnecting…</string>
    <string name="nabla_video_call_content_description_mic_off">Mic is muted</string>
    <string name="nabla_video_call_ended">Call ended</string>
    <string name="nabla_video_call_error_permission_refused">Microphone, Camera and Bluetooth permissions are mandatory to join a video call.</string>
    <string name="nabla_video_call_error_failed_to_join">Failed to join the call, please check your network and try again.</string>
</resources>